Basic layout design

--- a/index.html
+++ b/index.html
@@ -9,29 +9,40 @@
 </head>
 
 <body>
-    <div id="circle-bg" class="bg-[#1B3C53] w-full h-[320px]">
+    <div id="circle-bg" class="bg-[#1B3C53] w-full h-[380px] border border-red-500">
         <header>
             <section id="logo-div" class="flex flex-col justify-center items-center gap-6 w-[95%] mx-auto my-0">
                 <article id="mymusic-logo">
-                    <img src="./src/images/logo.png" class="rounded-4xl" alt="">
+                    <img src="./src/images/logo.png" class="rounded-4xl pt-4" alt="">
                 </article>
-                <div>
+                <div class="mx-4 p-4">
                     <span class="bg-[#101E26] text-[#ECDFCC] text-xl p-3 rounded-2xl">Your Music place, play it your
                         way</span>
                 </div>
             </section>
             <nav>
                 <section class="my-3 mx-3">
-                    <article class="bg-[#001F3F]">
+                    <article class="bg-[#001F3F] rounded-2xl">
                         <!-- Search icon -->
-                        <input type="text" id="text" class="w-full p-2 text-amber-50" placeholder="Search for folder" />
+                        <input type="text" id="text" class="w-full p-3 rounded-2xl text-amber-50" placeholder="Search for folder" />
                     </article>
                 </section>
             </nav>
         </header>
         <main>
             <!-- Used to display folders -->
-            <section id="display-folders"></section>
+            <section id="display-folders"
+                class="border border-amber-950 p-4 bg-gray-600 flex justify-around items-center">
+                <div class="border border-yellow-500 w-[120px] h-[120px] bg-black">
+                    <div></div>
+                </div>
+                <div class="border border-yellow-500 w-[120px] h-[120px] bg-black">
+                    <div></div>
+                </div>
+                <div class="border border-yellow-500 w-[120px] h-[120px] bg-black">
+                    <div></div>
+                </div>
+            </section>
             <!-- Song, play, pause section -->
             <article id="music-player"></article>
 
@@ -43,9 +54,19 @@
                 </div>
                 <!-- section two -->
                 <section class="bg-[#103766] h-96">
-                    <p class="bg-[#101E26] text-[#ECDFCC] mx-auto my-5 p-3 rounded-2xl text-4xl text-center w-[90%]">All time favorite</p>
-                    <div >
+                    <p class="bg-[#101E26] text-[#ECDFCC] mx-auto my-5 p-3 rounded-2xl text-4xl text-center w-[90%]">All
+                        time favorite</p>
+                    <div class="flex flex-col justify-around items-center gap-4 px-4">
                         <!-- displaying most fav/played songs -->
+                        <div class="border border-yellow-500 w-full h-[70px] bg-black">
+                            <div></div>
+                        </div>
+                        <div class="border border-yellow-500 w-full h-[70px] bg-black">
+                            <div></div>
+                        </div>
+                        <div class="border border-yellow-500 w-full h-[70px] bg-black">
+                            <div></div>
+                        </div>
                     </div>
                 </section>
             </section>
@@ -53,7 +74,6 @@
         <footer class="bg-[#001F3F] p-4">
             <p class="text-[#ECDFCC] text-center text-xl">MyMusic &copy; 2025</p>
         </footer>
-    </div>
 </body>
 
 </html>
