--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <!-- Logo & Heading container-->
             <section id="logo-div" class="flex flex-col justify-center items-center gap-6 w-[95%] mx-auto my-0">
-                <div id="mymusic-logo">
+                <div id="mymusic-logo" class="w-[90%]">
                     <img src="./src/images/logo.png" class="rounded-4xl pt-4" alt="">
                 </div>
                 <div class="mx-4 p-4">
@@ -42,28 +42,74 @@
         </header>
         <main>
             <!-- Used to display folders -->
-            <section id="display-folders" class="border border-amber-950 p-3 grid grid-cols-3 place-items-center gap-3">
-                <div class="border  w-[120px] h-[120px] bg-black">
+            <section id="display-folders" class=" p-3 grid grid-cols-3 place-items-center gap-3">
+                <div class="border  w-[100px] h-[100px] bg-black">
                     <div></div>
                 </div>
-                <div class="border  w-[120px] h-[120px] bg-black">
+                <div class="border  w-[100px] h-[100px] bg-black">
                     <div></div>
                 </div>
-                <div class="border  w-[120px] h-[120px] bg-black">
+                <div class="border  w-[100px] h-[100px] bg-black">
                     <div></div>
                 </div>
-                <div class="border  w-[120px] h-[120px] bg-black">
+                <div class="border  w-[100px] h-[100px] bg-black">
                     <div></div>
                 </div>
-                <div class="border  w-[120px] h-[120px] bg-black">
+                <div class="border  w-[100px] h-[100px] bg-black">
                     <div></div>
                 </div>
-                <div class="border  w-[120px] h-[120px] bg-black">
+                <div class="border  w-[100px] h-[100px] bg-black">
                     <div></div>
                 </div>
             </section>
             <!-- Song, play, pause section -->
-            <article id="music-player"></article>
+            <article id="music-player"
+                class="bg-[#1B3C53] w-[90%] mx-auto my-2.5 p-5 rounded-3xl flex justify-between items-center gap-1.5">
+                <div class="w-[50px] h-[50px] bg-black">
+                    <div></div>
+                </div>
+                <!-- Progress bar and music details holder -->
+                <div class="w-full p-1">
+                    <!-- Progress bar div -->
+                    <!-- Progress bar outer div -->
+                    <div class="bg-black w-full rounded-2xl p-1">
+                        <!-- Progress bar inner div -->
+                        <div class="bg-white w-[40%] p-1 rounded-2xl">
+
+                        </div>
+                        <!-- Progress bar inner div end -->
+                    </div>
+                    <!-- Progress bar outer div end -->
+                    <!-- Progress bar div end -->
+                    <!-- song details and controls div holder -->
+                    <div class="flex justify-between items-center mt-2">
+                        <!-- Music name -->
+                        <div class="border">
+                            <span class="text-[12px] text-white">Die for you ft.Grabbitz</span>
+                        </div>
+                        <!-- Music name end -->
+                        <!-- play, pause, next button div holder -->
+                        <div class="flex items-center gap-1 border-2">
+                            <!-- Prev btn -->
+                            <div class="w-[20px] h-[20px] bg-black"></div>
+                            <!-- prev btn end -->
+                            <!-- play/pause btn -->
+                            <div class="w-[20px] h-[20px] bg-black"></div>
+                            <!-- play,pasue btn end -->
+                            <!-- next btn -->
+                            <div class="w-[20px] h-[20px] bg-black"></div>
+                            <!-- next btn end -->
+                        </div>
+                        <!-- play, pause, next button div holder end -->
+                        <!-- song duration timer div -->
+                        <div>
+                            <span class="text-white text-sm">1:24/5:50</span>
+                        </div>
+                        <!-- song duration timer div end -->
+                    </div>
+                </div>
+                <!-- Progress bar and music details holder end-->
+            </article>
     </div>
 
     <!-- Second page -->
