--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <header>
             <!-- Logo & Heading container-->
             <section id="logo-div"
-                class="flex flex-col justify-center items-center gap-6 w-[95%] mx-auto my-0 border border-orange-400 md:flex-row md:gap-0 lg:border-2 lg:border-b-black lg:gap-0">
+                class="flex flex-col justify-center items-center gap-6 w-[95%] mx-auto my-0 border border-orange-400 md:flex-row md:gap-0 lg:border-2 lg:border-b-black lg:gap-0 xl:border-2 xl:border-cyan-300">
                 <div id="mymusic-logo" class="w-[90%] md:w-[50%]">
                     <img src="./src/images/logo.png" class="rounded-4xl p-4" alt="">
                 </div>
                 <div class="p-5">
                     <span
-                        class="bg-[#101E26] text-[#ECDFCC] text-md p-3 rounded-2xl md:text-lg md:font-semibold md:py-12 md:px-8 lg:text-3xl lg:px-8 lg:py-18">Your
+                        class="bg-[#101E26] text-[#ECDFCC] text-md px-6 py-8 rounded-2xl md:text-md md:font-semibold md:py-12 md:px-8 lg:text-3xl lg:px-8 lg:py-18">Your
                         Music place, play it your
                         way</span>
                 </div>
@@ -46,7 +46,7 @@
         <main>
             <!-- Used to display folders -->
             <section id="display-folders"
-                class=" w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 grid grid-cols-3 place-items-center gap-3 border border-amber-300 md:grid-cols-5 lg:grid-cols-6">
+                class=" w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-5 p-3 grid grid-cols-3 place-items-center gap-3 border border-amber-300 md:grid-cols-5 lg:grid-cols-6">
                 <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
                     <div></div>
                 </div>
@@ -86,7 +86,7 @@
             </section>
             <!-- Song, play, pause section -->
             <article id="music-player"
-                class="bg-[#1B3C53] w-[90%] mx-auto my-2 p-3 rounded-3xl flex justify-between items-center gap-1.5">
+                class="bg-[#1B3C53] w-[90%] lg:w-[80%] xl:w-[80%] mx-auto my-2 p-3 rounded-3xl flex justify-between items-center gap-1.5">
                 <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] bg-black">
                     <div></div>
                 </div>
