--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <!-- Circle Div -->
     <!-- <div id="circle-div" class="border-2 border-amber-700 absolute top-0 left-0 z-[-1]"> -->
     <!-- Outer Cricle Div -->
-    <div id="outer-circle-div" class="bg-[#456882] relative z-[1] overflow-hidden border-2 border-b-white">
+    <div id="outer-circle-div" class="bg-[#456882] relative z-[1] overflow-hidden">
         <!--Inner Circle div -->
         <div id="inner-circle-div" class="absolute top-0 left-0 bg-[#1B3C53] w-full h-[500px] -z-10 rounded-b-[100%]">
         </div>
         <header>
             <!-- Logo & Heading container-->
             <section id="logo-div"
-                class="flex flex-col justify-center items-center gap-6 w-[95%] mx-auto my-0 border border-orange-400 md:flex-row md:gap-0 lg:border-2 lg:border-b-black lg:gap-0 xl:border-2 xl:border-cyan-300">
+                class="flex flex-col justify-center items-center gap-6 w-[95%] mx-auto my-0 md:flex-row md:gap-0  lg:gap-0">
                 <div id="mymusic-logo" class="w-[90%] md:w-[50%]">
                     <img src="./src/images/logo.png" class="rounded-4xl p-4" alt="">
                 </div>
@@ -46,7 +46,7 @@
         <main>
             <!-- Used to display folders -->
             <section id="display-folders"
-                class=" w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-5 p-3 grid grid-cols-3 place-items-center gap-3 border border-amber-300 md:grid-cols-5 lg:grid-cols-6">
+                class=" w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-5 p-3 grid grid-cols-3 place-items-center gap-3  md:grid-cols-5 lg:grid-cols-6">
                 <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
                     <div></div>
                 </div>
@@ -137,7 +137,7 @@
 
     <!-- Second page -->
     <!-- section one -->
-    <section class="flex flex-col md:flex-row md:w-full border-2 border-green-500">
+    <section class="flex flex-col md:flex-row md:w-full">
         <div class="bg-[#101E26] md:w-[30%] md:flex md:justify-center md:items-center">
             <h4 class="text-[#ECDFCC] text-7xl p-10 md: md:leading-[100px]">Taste of<br>Music</h4>
         </div>
@@ -146,7 +146,7 @@
             <p class="bg-[#101E26] text-[#ECDFCC] mx-auto my-5 p-3 rounded-2xl text-4xl text-center w-[90%]">All
                 time favorite</p>
             <div
-                class="grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:h-4/5 lg:py-7 lg:px-6 border-2 border-pink-400">
+                class="grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:h-4/5 lg:py-7 lg:px-6">
                 <!-- displaying most fav/played songs -->
                 <div class="border  w-full h-[70px] bg-black">
                     <div></div>
@@ -182,6 +182,7 @@
     <footer class="bg-[#001F3F] p-4">
         <p class="text-[#ECDFCC] text-center text-xl">MyMusic &copy; 2025</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
