--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- Used to display folders -->
             <section id="display-folders"
                 class=" w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-5 p-3 grid grid-cols-3 place-items-center gap-3  md:grid-cols-5 lg:grid-cols-6">
-                <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
+                <!-- <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
                     <div></div>
                 </div>
                 <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
@@ -82,7 +82,7 @@
                 </div>
                 <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
                     <div></div>
-                </div>
+                </div> -->
             </section>
             <!-- Song, play, pause section -->
             <article id="music-player"
