added song display section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <main>
             <!-- Used to display folders -->
             <section id="display-folders"
-                class=" w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 grid grid-cols-3 place-items-center gap-3 border border-amber-300 md:grid-cols-5 lg:grid-cols-6">
+                class="w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 hidden grid-cols-3 place-items-center gap-3 border border-amber-300 md:grid-cols-5 lg:grid-cols-6">
                 <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
                     <div></div>
                 </div>
@@ -84,6 +84,60 @@
                     <div></div>
                 </div>
             </section>
+            <!-- Used to display folders container end-->
+            <!-- Used to display the songs from folder -->
+            <section id="display-songs"
+                class="w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 grid grid-cols-1 place-items-center gap-3 border border-amber-300 md:grid-cols-5 lg:grid-cols-6">
+                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl ">
+                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                    <div>
+                        <p class="text-white text-sm p-2">Boku no Hero Academia  - Merry-Go-Round</p>
+                    </div>
+                </div>
+                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
+                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                    <div>
+                        <p class="text-white text-sm py-2">Boku no Hero Academia  - Merry-Go-Round</p>
+                    </div>
+                </div>
+                <div class="border bg-gray-600 px-3 py-2 flex justify-between items-center gap-3 rounded-xl w-full">
+                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                    <div>
+                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
+                    </div>
+                </div>
+                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
+                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                    <div>
+                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
+                    </div>
+                </div>
+                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
+                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                    <div >
+                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
+                    </div>
+                </div>
+                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
+                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                    <div>
+                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
+                    </div>
+                </div>
+                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
+                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                    <div>
+                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
+                    </div>
+                </div>
+                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
+                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                    <div>
+                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
+                    </div>
+                </div>
+            </section>
+            <!-- Used to display the songs from folder container end-->
             <!-- Song, play, pause section -->
             <article id="music-player"
                 class="bg-[#1B3C53] w-[90%] mx-auto my-2 p-3 rounded-3xl flex justify-between items-center gap-1.5">
